[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Captain/Sword/Sword Spinning 03.png" type="Texture" id=1]
[ext_resource path="res://Assets/Captain/Sword/Sword Spinning 01.png" type="Texture" id=2]
[ext_resource path="res://Assets/Captain/Sword/Sword Spinning 04.png" type="Texture" id=3]
[ext_resource path="res://Assets/Captain/Sword/Sword Spinning 02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Captain/Sword/Shoot.gd" type="Script" id=5]
[ext_resource path="res://Assets/Captain/Sword/Sound/Shoot.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Captain/Sword/Sword Embedded/Sword Embedded 03.png" type="Texture" id=7]
[ext_resource path="res://Assets/Captain/Sword/Sword Embedded/Sword Embedded 04.png" type="Texture" id=8]
[ext_resource path="res://Assets/Captain/Sword/Sword Embedded/Sword Embedded 02.png" type="Texture" id=9]
[ext_resource path="res://Assets/Captain/Sword/Sword Embedded/Sword Embedded 01.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "embedded"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "shoot"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[node name="Shoot" type="Area2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/embedded = SubResource( 4 )
anims/shoot = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 3.57628e-07 )
scale = Vector2( 0.7, 0.7 )

[connection signal="body_entered" from="." to="." method="_on_Shoot_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
